# screen-annotator

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  nsis-hooks.nsi  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
